[package]
name = "flag-bearer"
version = "0.1.0-rc.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Generic async semaphores"
repository = "https://github.com/conradludgate/flag-bearer"

[dependencies]
pin-project-lite = "0.2"
parking_lot = { version = "0.12", default-features = false }
pin-list = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-testing = { git = "https://github.com/conradludgate/futures-testing" }
futures-util = "0.3"
