[package]
name = "flag-bearer-core"
version = "0.1.0-rc.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Generic async semaphores"
repository = "https://github.com/conradludgate/flag-bearer"

[dependencies]

[dev-dependencies]
flag-bearer = { version = "0.1.0-rc.6", path = "../flag-bearer" }
pollster = "0.4"
