[package]
name = "flag-bearer-examples"
version = "0.1.0"
edition = "2024"
publish = false

# This crate exists only to host runnable examples for `flag-bearer`, keeping
# their dependencies (e.g. tokio) out of the published crate.

[dev-dependencies]
flag-bearer = { path = "../flag-bearer", version = "0.1.0-rc.8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
