[package]
name = "flag-bearer-mutex"
version = "0.1.0-rc.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Generic async semaphores"
repository = "https://github.com/conradludgate/flag-bearer"

[dependencies]
cfg-if = "1"
lock_api = "0.4"

[target.'cfg(target_os ="linux")'.dependencies]
libc = "0.2.170"

[target.'cfg(not(target_os = "linux"))'.dependencies]
parking_lot = { version = "0.12", default-features = false }
