[package]
name = "flag-bearer-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flag-bearer = { path = "../flag-bearer", version = "0.1.0-rc.4" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
futures-testing = { git = "https://github.com/conradludgate/futures-testing" }
futures-util = { version = "0.3", default-features = false }

hdrhistogram = "7.5.4"
pollster = "0.4"

[[bench]]
harness = false
name = "acquire"

[[bench]]
harness = false
name = "try_acquire"
