[package]
name = "flag-bearer-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flag-bearer = { path = "../flag-bearer", version = "0.1.0-rc.8" }
pollster = "0.4"
hdrhistogram = "7.5.4"
rand = { version = "0.10", default-features = false }
rand_xoshiro = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
futures-testing = { git = "https://github.com/conradludgate/futures-testing" }
futures-util = { version = "0.3", default-features = false }
arbitrary = { version = "1", features = ["derive"] }

[[bench]]
harness = false
name = "acquire"

[[bench]]
harness = false
name = "try_acquire"
