[package]
name = "flag-bearer"
version = "0.1.0-rc.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Generic async semaphores"
repository = "https://github.com/conradludgate/flag-bearer"

[dependencies]
pin-list = { version = "0.1", default-features = false }
pin-project-lite = "0.2"
cfg-if = "1"

[target.'cfg(target_os ="linux")'.dependencies]
libc = "0.2.170"
lock_api = "0.4"

[target.'cfg(not(target_os = "linux"))'.dependencies]
parking_lot = { version = "0.12", default-features = false }

[dev-dependencies]
pollster = "0.4"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.7.2", features = ["futures"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }
