[package]
name = "flag-bearer"
version = "0.1.0-rc.8"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Generic async semaphores"
repository = "https://github.com/conradludgate/flag-bearer"

[dependencies]
flag-bearer-core = { version = "0.1.0-rc.9", path = "../flag-bearer-core" }
flag-bearer-queue = { version = "0.1.0-rc.8", path = "../flag-bearer-queue" }
flag-bearer-mutex = { version = "0.1.0-rc.7", path = "../flag-bearer-mutex" }

[dev-dependencies]
pollster = "0.4"
