[package]
name = "tokio-postgres-pool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flag-bearer = { version = "0.1.0-rc.7", path = "../flag-bearer" }
tokio-postgres = "0.7.13"
tokio = { version = "1", features = ["time", "rt"] }

flag-bearer-core = { version = "0.1.0-rc.7", path = "../flag-bearer-core" }
flag-bearer-queue = { version = "0.1.0-rc.7", path = "../flag-bearer-queue" }
flag-bearer-mutex = { version = "0.1.0-rc.7", path = "../flag-bearer-mutex" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
